methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:42: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
      if (isFacingTrail()){
                       ^