methods.slug.SlugSnail.scala.code
 def hunt(c:Color) {
     while(!estSurBiscuit){
      if (isFacingTrail(c)){
        avance()
        baisseBrosse()
        leveBrosse()
      }
      else{
        droite()
      }
    }
  prendBiscuit()
 }

 // here comes your isFacingTrail method   
def isFacingTrail(c:Color):Boolean = {
  if (estFaceMur){
    return false
  }
  else{
    avance()
    if (getCouleurSol() == c){
      recule()
    	return true
  	}
    	
  	else{
      recule()
    	return false
  	}
	}
}






def hunt() {
    while(!estSurBiscuit){
      if (isFacingTrail()){
        avance()
        baisseBrosse()
        leveBrosse()
      }
      else{
        droite()
      }
    }
  prendBiscuit()
}

